--- a/real_estate/views/estate_property_views.xml
+++ b/real_estate/views/estate_property_views.xml
@@ -10,4 +10,98 @@
             </p>
         </field>
     </record>
+
+
+    <record id="view_estate_property_list" model="ir.ui.view">
+        <field name="name">estate.property.list</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <tree string="Properties">
+                <field name="property_type_id"/>
+                <field name="tag_ids" widget="many2many_tags" />
+
+                <field name="name" string="Title"/>
+                <field name="description"/>
+                <field name="postcode"/>
+                <field name="date_availability" string="Available From"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area" string="Living Area (sq m)"/>
+                <field name="facades"/>
+                <field name="garage"/>
+                <field name="garden"/>
+                <field name="garden_area" string="Garden Area (sq m)"/>
+                <field name="garden_orientation" string="Garden Orientation"/>
+                <field name="state" string="Status"/>
+            </tree>
+        </field>
+    </record>
+
+
+    <record id="view_estate_property_form" model="ir.ui.view">
+    <field name="name">estate.property.form</field>
+    <field name="model">estate.property</field>
+    <field name="arch" type="xml">
+        <form string="Property">
+            <sheet>
+                <group>
+                    <group>
+                        <field name="name" placeholder="Title"/>
+                        <field name="description"/>
+                        <field name="postcode"/>
+                        <field name="date_availability"/>
+                        <field name="expected_price"/>
+                        <field name="selling_price"/>
+                        <field name="state"/>
+                    </group>
+                    <group>
+                        <field name="bedrooms"/>
+                        <field name="living_area"/>
+                        <field name="facades"/>
+                        <field name="garage"/>
+                        <field name="garden"/>
+                        <field name="garden_area"/>
+                        <field name="garden_orientation"/>
+                    </group>
+                </group>
+            </sheet>
+                <notebook>
+                    <page string="Tags">
+                        <group>
+                            <field name="tag_ids" widget="many2many_tags" placeholder="Choose Tags..."/>
+                        </group>
+                    </page>
+                    <page string="Contacts">
+                        <group>
+                            <field name="buyer_id"/>
+                            <field name="salesperson_id"/>
+                        </group>
+                    </page>
+                </notebook>
+        </form>
+    </field>
+    </record>
+
+    <record id="view_estate_property_form_inherit" model="ir.ui.view">
+    <field name="name">estate.property.form.inherit</field>
+    <field name="model">estate.property</field>
+    <field name="inherit_id" ref="estate.view_estate_property_form"/>
+    <field name="arch" type="xml">
+        <notebook position="inside">
+            <page string="Contacts">
+                <group>
+                    <field name="buyer_id"/>
+                    <field name="salesperson_id"/>
+                </group>
+            </page>
+        </notebook>
+    </field>
+    </record>
+
+
+
+
+
+
 </odoo>
