--- a/addons/real_estate/views/estate_property_views.xml
+++ b/addons/real_estate/views/estate_property_views.xml
@@ -1,10 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    
+
+
+    <record id="view_estate_property_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Search Property">
+                <field name="name" string="Title"/>
+                <field name="postcode"/>
+                <field name="date_availability"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="state"/>
+                <field name="living_area" filter_domain="['|', ('living_area', '=', self), ('living_area', '>=', self)]" />
+
+
+                <!-- Filters -->
+                <separator/>
+                <filter string="Available" name="filter_available" domain="[('state', 'in', ['New', 'Offer Received'])]"/>
+                <filter string="New" name="filter_new" domain="[('state','=','New')]"/>
+                <filter string="Sold" name="filter_sold" domain="[('state','=','Sold')]"/>
+
+                <!-- Group By -->
+                <group string="Group By">
+                    <filter string="Postcode" name="group_by_postcode" context="{'group_by':'postcode'}"/>
+                </group>
+
+
+            </search>
+        </field>
+    </record>    
     <record id="action_estate_property" model="ir.actions.act_window">
         <field name="name">Estate Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_available': 1}</field>
+        <field name="search_view_id" ref="view_estate_property_search"/>
+
         <field name="help" type="html">
             <p class="o_view_nocontent_empty_folder">
                 Click to create a new property.
@@ -17,13 +50,13 @@
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <tree string="Properties">
-                <field name="property_type_id"/>
-                <field name="tag_ids" widget="many2many_tags" />
+                <field name="property_type_id" options="{'no_create': True, 'no_open': True}"/>
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
 
                 <field name="name" string="Title"/>
                 <field name="description"/>
                 <field name="postcode"/>
-                <field name="date_availability" string="Available From"/>
+                <field name="date_availability" string="Available From" optional="hide"/>
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="bedrooms"/>
@@ -39,48 +72,79 @@
     </record>
 
 
-<record id="view_estate_property_form" model="ir.ui.view">
-    <field name="name">estate.property.form</field>
-    <field name="model">estate.property</field>
-    <field name="arch" type="xml">
-        <form string="Property">
-            <sheet>
-                <group>
+
+    <record id="filter_property_available" model="ir.ui.view">
+        <field name="name">Available Properties</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search>
+                <filter name="available" string="Available" domain="[('state', '=', 'available')]" />
+            </search>
+        </field>
+    </record>
+
+
+    <record id="view_estate_property_form" model="ir.ui.view">
+        <field name="name">estate.property.form</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <form string="Property">
+                <header>
+                    <button name="action_sold" type="object" string="Sold" class="btn-secondary" states="new,offer_received,offer_accepted" />
+                    <button name="action_cancel" type="object" string="Cancel" class="btn-secondary" states="new,offer_received,offer_accepted,sold" />
+                </header>   
+                <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold,canceled" statusbar_colors='{"offer_received":"orange","offer_accepted":"blue","sold":"green","canceled":"red"}'/>
+
+                <sheet>
                     <group>
-                        <field name="name" placeholder="Title"/>
-                        <field name="description"/>
-                        <field name="postcode"/>
-                        <field name="date_availability"/>
-                        <field name="expected_price"/>
-                        <field name="selling_price"/>
-                        <field name="state"/>
+                        <group>
+                            <field name="name" placeholder="Title"/>
+                            <field name="description"/>
+                            <field name="postcode"/>
+                            <field name="date_availability" optional="hide"/>
+                            <field name="expected_price"/>
+                            <field name="selling_price"/>
+                            <field name="state"/>
+                        </group>
+                        <group>
+                            <field name="bedrooms"/>
+                            <field name="living_area"/>
+                            <field name="facades"/>
+                            <field name="garage"/>
+                            <field name="garden"/>
+                            <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}" />
+                            <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}" />
+                            <field name="total_area"/>
+                        </group>
                     </group>
-                    <group>
-                        <field name="bedrooms"/>
-                        <field name="living_area"/>
-                        <field name="facades"/>
-                        <field name="garage"/>
-                        <field name="garden"/>
-                        <field name="garden_area"/>
-                        <field name="garden_orientation"/>
-                        <field name="total_area"/>
-                    </group>
-                </group>
-            </sheet>
-            <notebook>
-                <page string="Tags">
-                    <group>
-                        <field name="tag_ids" widget="many2many_tags" placeholder="Choose Tags..."/>
-                    </group>
-                </page>
-                <page string="Contacts">
-                    <group>
-                        <field name="buyer_id"/>
-                        <field name="salesperson_id"/>
-                    </group>
-                </page>
-            </notebook>
-        </form>
-    </field>
+                    <notebook>
+                    <page string="Tags">
+                        <group>
+                            <field name="tag_ids" widget="many2many_tags" placeholder="Choose Tags..."/>
+                        </group>
+                    </page>
+                    <page string="Offers">
+                        <field name="offer_ids" attrs="{'readonly': [('state', 'in', ['offer_accepted', 'sold', 'canceled'])]}">
+                            <tree string="Property Offers">
+                                <field name="price"/>
+                                <field name="partner_id"/>
+                                <field name="state" widget="statusbar" statusbar_visible="new,accepted,refused" statusbar_colors='{"accepted":"green","refused":"red"}'/>
+                                <button name="action_accept" type="object" string="Accept" class="btn-primary" attrs="{'invisible': [('state', 'in', ['accepted', 'refused'])]}" />
+                                <button name="action_refuse" type="object" string="Refuse" class="btn-secondary" attrs="{'invisible': [('state', 'in', ['accepted', 'refused'])]}" />
+                            </tree>
+                        </field>
+                    </page>
+
+                    <page string="Contacts">
+                        <group>
+                            <field name="buyer_id"/>
+                            <field name="salesperson_id"/>
+                        </group>
+                    </page>
+                </notebook>
+                </sheet>
+                
+            </form>
+        </field>
     </record>
 </odoo>
