--- a/addons/real_estate/views/estate_property_tag_views.xml
+++ b/addons/real_estate/views/estate_property_tag_views.xml
@@ -15,7 +15,7 @@
         <field name="name">estate.property.tag.list</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
-            <tree string="Property Tags">
+            <tree string="Property Tags" editable="bottom">
                 <field name="name" string="Tag Name"/>
             </tree>
         </field>
